1. 修改 README.md
2. 实现 Web 浏览器的扫描识别功能

3. 改为 TypeScript 支持

4. 修正 index.html

5. 引入 ant-design-vue

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico" />
+    <meta name="renderer" content="webkit|ie-comp|ie-stand">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Makeit Vip Scanning Demo App</title>
+    <link rel="icon" href="/favicon.ico" />
+    <title>H5 二维码 / 条形码扫描解析 - 麦可易特网 - Powered By makeit.vip</title>
 </head>
 <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/app.ts"></script>
 </body>
 </html>
