--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/favicon.ico" />
-    <title>H5 二维码 / 条形码扫描解析 - 麦可易特网 - Powered By makeit.vip</title>
+    <title>H5 二维码 / 条形码扫描解析 - Powered By makeit.vip</title>
 </head>
 <body>
     <div id="app"></div>
