--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/favicon.ico" />
     <title>H5 二维码 / 条形码扫描解析 - Powered By makeit.vip.</title>
+    <meta name="description" content="H5 + Web 浏览器端拉起摄像头，实现二维码 / 条形码的扫描并且解析（iPhone 系列手机，除了 Safari 自带浏览器支持外，其它任何浏览器不支持设置网站权限，采用折中的拍照识别方式，识别正确率比较低）注：并未做比较全面的测试">
 </head>
 <body>
     <div id="app"></div>
